--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <script src="bower_components/platform/platform.js"></script>
   <script src="scripts/js/application.js"></script>
   <link rel="import" href="elements/fb-main/fb-main.html">
+  <link rel="import" href="elements/fb-mouse/fb-mouse.html">
   <link rel="stylesheet" type="text/css" href="styles/css/application.css">
 </head>
 <body>
+  <fb-mouse id="fb-mouse"></fb-mouse>
  <fb-main width="100%" height="100%"></fb-main>
 </body>
 </html>
