--- a/elements/fb-player/fb-player.html
+++ b/elements/fb-player/fb-player.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../fb-canvas/fb-canvas.html">
-<polymer-element name="fb-player" constructor="FbPlayer" extends="fb-canvas">
+<polymer-element name="fb-player" constructor="FbPlayer" extends="fb-canvas" attributes="mouse-model">
   <script type="text/javascript" src="fb-player.js"></script>
 </polymer-element>
