--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <title>Oh Hai Thur</title>
   <script src="bower_components/platform/platform.js"></script>
-  <script src="scripts/js/application.js"></script>
+  <script src="static/scripts/js/application.js"></script>
   <link rel="import" href="elements/fb-main/fb-main.html">
   <link rel="import" href="elements/fb-mouse/fb-mouse.html">
-  <link rel="stylesheet" type="text/css" href="styles/css/application.css">
+  <link rel="import" href="elements/fb-image-manager/fb-image-manager.html">
+  <link rel="stylesheet" type="text/css" href="static/styles/css/application.css">
 </head>
 <body>
+  <fb-image-manager id="fb-image-manager"></fb-image-manager>
   <fb-mouse id="fb-mouse"></fb-mouse>
   <fb-main width="100%" height="100%"></fb-main>
 </body>
