disgusting state of code, but I have images loading mostly hardcoded

--- a/elements/fb-image/fb-image.html
+++ b/elements/fb-image/fb-image.html
@@ -1,4 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<polymer-element name="fb-image" constructor="FbImage">
+<link rel="import" href="../fb-canvas/fb-canvas.html">
+
+<polymer-element name="fb-image" constructor="FbImage" extends="fb-canvas">
   <script type="text/javascript" src="fb-image.js"></script>
 </polymer-element>
