--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
   <title>Oh Hai Thur</title>
   <script src="bower_components/platform/platform.js"></script>
-  <script src="static/scripts/js/application.js"></script>
   <link rel="import" href="elements/fb-main/fb-main.html">
-  <link rel="import" href="elements/fb-mouse/fb-mouse.html">
   <link rel="import" href="elements/fb-image-manager/fb-image-manager.html">
-  <link rel="stylesheet" type="text/css" href="static/styles/css/application.css">
+  <link rel="import" href="elements/fb-mouse/fb-mouse.html">
+  <link rel="import" href="elements/fb-constants/fb-constants.html">
+  <style type="text/css">
+     * { margin: 0; padding: 0; }
+  </style>
 </head>
 <body>
-  <fb-image-manager id="fb-image-manager"></fb-image-manager>
+  <fb-constants id="fb-constants"></fb-constants>
   <fb-mouse id="fb-mouse"></fb-mouse>
+  <fb-image-manager id="fb-image-manager"></fb-image-manager>
   <fb-main width="100%" height="100%"></fb-main>
 </body>
 </html>
